--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background-color: #121212;
             color: #ffffff;
             text-align: center;
@@ -21,6 +21,8 @@
             border-radius: 50%;
             display: inline-block;
             padding: 15px;
+            font-size: 1.5em;
+            font-weight: bold;
         }
 
         h1 {
@@ -35,7 +37,7 @@
             margin: 5px;
         }
 
-        .skills, .problem-solving, .stats, .trophies, .quotes, .connect {
+        .skills, .problem-solving, .stats, .trophies, .quotes, .connect, .cv, .blog {
             margin: 30px 0;
         }
 
@@ -50,58 +52,43 @@
 
         .connect a {
             margin: 0 10px;
+            transition: transform 0.3s ease;
         }
 
-        .cv {
-            margin: 30px 0;
+        .connect a:hover {
+            transform: scale(1.1);
+        }
+
+        .cv a:hover {
+            background: #ffcc00;
+            color: #121212;
         }
     </style>
 </head>
 
 <body>
-    <div class="logo">
-        <h2>SPS</h2>
-    </div>
+    <div class="logo">SPS</div>
 
-    <h1><img src="https://i.gifer.com/Wczc.gif" height="55px" width="55px"> I am Shiva</h1>
-    <h2>A CSE Undergrad Student from Brac University, Bangladesh</h2>
+    <h1 align="center">
+        <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=500&height=70&duration=5000&lines=Hello!+👋;+I+am+Shiva+Prasad+Sarkar!;Undergrad+CSE+Student;+Brac+University,+Bangladesh;" />
+    </h1>
 
     <div class="skills">
         <h3>💻 My Skills:</h3>
         <img src="https://img.shields.io/badge/latex-%23008080.svg?style=for-the-badge&logo=latex&logoColor=white">
         <img src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&logo=openjdk&logoColor=white">
-        <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white">
-        <img src="https://img.shields.io/badge/c-%2300599C.svg?style=for-the-badge&logo=c&logoColor=white">
         <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54">
-        <img src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white">
-        <img src="https://img.shields.io/badge/numpy-%23013243.svg?style=for-the-badge&logo=numpy&logoColor=white">
-        <img src="https://img.shields.io/badge/Matplotlib-%23ffffff.svg?style=for-the-badge&logo=Matplotlib&logoColor=black">
-        <img src="https://img.shields.io/badge/SciPy-%230C55A5.svg?style=for-the-badge&logo=scipy&logoColor=%white">
-        <img src="https://img.shields.io/badge/Canva-%2300C4CC.svg?style=for-the-badge&logo=Canva&logoColor=white">
         <img src="https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white">
     </div>
 
     <div class="problem-solving">
         <h3>✨ Problem Solving:</h3>
-        <p>
-            <a href="https://www.hackerrank.com/profile/shiva_prasad_sa1" target="_blank">
-                <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/hackerrank.svg" height="30" width="30">
-            </a>
-            <a href="https://www.leetcode.com/u/user9575st/" target="_blank">
-                <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/leet-code.svg" height="30" width="30">
-            </a>
-            <a href="https://codeforces.com/profile/SpS__79" target="_blank">
-                <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/codeforces.svg" height="30" width="30">
-            </a>
-        </p>
-        <p>
-            <a href="https://leetcode.com/user9575st/">
-                <img height="220" src="https://leetcard.jacoblin.cool/user9575st?theme=dark&font=ABeeZee&ext=heatmap">
-            </a>
-            <a href="https://codeforces.com/profile/SpS__79">
-                <img height="220" src="https://codeforces-readme-stats.vercel.app/api/card?username=SpS__79&theme=dark&force_username=true">
-            </a>
-        </p>
+        <a href="https://leetcode.com/user9575st/">
+            <img height="220" src="https://leetcard.jacoblin.cool/user9575st?theme=dark&font=ABeeZee&ext=heatmap">
+        </a>
+        <a href="https://codeforces.com/profile/SpS__79">
+            <img height="220" src="https://codeforces-readme-stats.vercel.app/api/card?username=SpS__79&theme=dark&force_username=true">
+        </a>
     </div>
 
     <div class="connect">
@@ -109,11 +96,18 @@
         <a href="mailto:shivaprasadsarkarsps@gmail.com">
             <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white">
         </a>
-        <a href="https://facebook.com/shivaprasadsarkar.sps/">
-            <img src="https://img.shields.io/badge/Facebook-%231877F2.svg?logo=Facebook&logoColor=white">
-        </a>
         <a href="https://linkedin.com/in/shiva-prasad-sarkar-4700ab227/">
             <img src="https://img.shields.io/badge/LinkedIn-%230077B5.svg?logo=linkedin&logoColor=white">
+        </a>
+        <a href="https://github.com/Shiva-Prasad-Sarkar" target="_blank">
+            <img src="https://img.shields.io/badge/GitHub-%23121011.svg?logo=github&logoColor=white">
+        </a>
+    </div>
+
+    <div class="blog">
+        <h3>📝 Check Out My Blog:</h3>
+        <a href="https://vigilantassociation.blogspot.com/" target="_blank">
+            <img src="https://img.shields.io/badge/Blogspot-%23FF5722.svg?style=for-the-badge&logo=blogger&logoColor=white">
         </a>
     </div>
 
