--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #121212;
+            background: linear-gradient(to right, #141e30, #243b55);
             color: #ffffff;
             text-align: center;
         }
@@ -23,6 +23,7 @@
             padding: 15px;
             font-size: 1.5em;
             font-weight: bold;
+            background: rgba(255, 255, 255, 0.1);
         }
 
         h1 {
@@ -59,6 +60,10 @@
             transform: scale(1.1);
         }
 
+        .connect img {
+            height: 40px;
+        }
+
         .cv a:hover {
             background: #ffcc00;
             color: #121212;
@@ -79,6 +84,8 @@
         <img src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&logo=openjdk&logoColor=white">
         <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54">
         <img src="https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white">
+        <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white">
+        <img src="https://img.shields.io/badge/c-%2300599C.svg?style=for-the-badge&logo=c&logoColor=white">
     </div>
 
     <div class="problem-solving">
