--- a/index.html
+++ b/index.html
@@ -127,3 +127,7 @@
 </body>
 
 </html>
+
+<p align="center">
+<a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Rubik+Maps&size=27&duration=3000&pause=1000&center=true&random=false&width=435&height=60&lines=THANKS+FOR+THE+VISIT;DO+GOOD,;BE+GOOD,;PLANT+MORE+TREES!" alt="Typing SVG" /></a>
+</p>
