--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <div class="projects-grid">
         <!-- Project Card 1 -->
         <div class="project-card">
-          <img src="images/project1.png" alt="3D Space Shooter Game" />
+          <img src="space.png" alt="3D Space Shooter Game" />
           <h4>3D Space Shooter Game with OpenGL</h4>
           <p>
             A Python and PyOpenGL‑based 3D space combat game featuring a player ship, enemies, bullets, a health system, and multiple camera perspectives.
