--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shiva Prasad Sarkar's Portfolio</title>
-  <!-- Font Awesome for extra icons if needed -->
+  <link rel="icon" href="https://i.imgur.com/4z7Z5bH.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     /* Reset */
@@ -12,6 +12,30 @@
       box-sizing: border-box;
       margin: 0;
       padding: 0;
+
+      /* Section backgrounds with shading */
+      #home {
+        background: linear-gradient(135deg, #e3f2fd 50%, #bbdefb 100%);
+      }
+      .skills {
+        background: linear-gradient(135deg, #f1f8e9 50%, #dcedc8 100%);
+      }
+      .problem-solving {
+        background: linear-gradient(135deg, #fff3e0 50%, #ffe0b2 100%);
+      }
+      .projects {
+        background: linear-gradient(135deg, #fce4ec 30%, #f8bbd0 70%);
+      }
+      .connect {
+        background: linear-gradient(135deg, #ede7f6 50%, #d1c4e9 100%);
+      }
+      .cv {
+        background: linear-gradient(135deg, #e0f7fa 50%, #b2ebf2 100%);
+      }
+      /* Nav bar background with shading */
+      header {
+        background: linear-gradient(90deg, #ffffff 50%, #e3f2fd 100%);
+      }
     }
     /* Global Styles */
     body {
@@ -346,12 +370,15 @@
   <section class="connect" id="connect">
     <div class="container">
       <h3>🌐 Connect With Me:</h3>
-      <a href="mailto:shivaprasadsarkarsps@gmail.com">
-        <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Gmail">
-      </a>
       <a href="https://facebook.com/shivaprasadsarkar.sps/" target="_blank">
         <img src="https://img.shields.io/badge/Facebook-%231877F2.svg?logo=Facebook&logoColor=white" alt="Facebook">
       </a>
+      <a href="mailto:shivaprasadsarkarsps@gmail.com">
+        <img src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white" alt="Gmail">
+      </a>
+
+
+      
       <a href="https://linkedin.com/in/shiva-prasad-sarkar-4700ab227/" target="_blank">
         <img src="https://img.shields.io/badge/LinkedIn-%230077B5.svg?logo=linkedin&logoColor=white" alt="LinkedIn">
       </a>
