--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shiva Prasad Sarkar's Portfolio</title>
-  <link rel="icon" href="https://i.imgur.com/4z7Z5bH.png" type="image/png">
+  <link rel="icon" href="https://cdn.dribbble.com/userupload/15911053/file/original-e9fc7a43eb0aac0995b88b56062c1e18.jpg?resize=1504x1128&vertical=center" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     /* Reset */
