--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
         </div>
         <div class="project-card">
           <img src="enemy.png" alt="Enemy-Shooter" />
-          <h4>Catch the Diamond</h4>
+          <h4>Enemy Shooter</h4>
           <p>Python and PyOpenGL based 3D action game featuring a player, multiple enemies, bullets, a health system, and multiple camera perspectives.</p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/GAMES-AND-PROJECTS/tree/main" class="btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
-          <img src="TIC.png" alt="Blinking Ball" />
-          <h4>Catch the Diamond</h4>
+          <img src="TIC.PNG" alt="Blinking Ball" />
+          <h4>Tic Tac Toe</h4>
           <p>Python based game featuring my object oriented programming concepts</p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/GAMES-AND-PROJECTS/tree/main" class="btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <img src="blink.png" alt="Catch" />
-          <h4>Catch the Diamond</h4>
+          <h4>Blinking Ball</h4>
           <p>Python and openGl based game using multiple python libraries and vector concepts<p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/GAMES-AND-PROJECTS/tree/main" class="btn" target="_blank">View Project</a>
         </div>
